[project]
name = "fastapi-authkit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi-authkit",
    "build>=1.4.0",
    "fastapi>=0.128.2",
    "hatchling>=1.28.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "aiosqlite>=0.20.0",
    "twine>=6.2.0",
    "uvicorn>=0.40.0",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.24.0",
    "pydantic[email]>=2.12.5",
]
[tool.uv.sources]
fastapi-authkit = { path = "packages/authkit", editable = true }
fastapi-authkit-stubs = { path = "packages/authkit_types", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["packages/authkit/src"]

[tool.pyright]
typeCheckingMode = "standard"
stubPath = "typings"
