[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "fastapi-jwt-authkit"
version = "1.0.2"
description = "FastAPI authentication library with JWT access/refresh tokens, sync & async SQLAlchemy support, built-in auth routes (register/login/refresh/me), secure password hashing, and cookie/header token support."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Azim Hossain Tuhin" }]
keywords = ["fastapi", "auth", "authentication", "jwt", "json-web-token", "sqlalchemy", "async", "sync", "security", "login", "register", "refresh-token", "access-token", "password-hashing", "bcrypt", "fastapi-auth", "fastapi-jwt"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/azimhossaintuhin/fastapi-jwt-authkit"
Repository = "https://github.com/azimhossaintuhin/fastapi-jwt-authkit"
Issues = "https://github.com/azimhossaintuhin/fastapi-jwt-authkit/issues"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110",
    "pydantic[email]>=2.0.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
    "uvicorn>=0.40.0",
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.24.0",
    "fastapi>=0.110",
    "sqlalchemy>=2.0.0",
    "pydantic[email]>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/authkit/src/authkit"]

[tool.hatch.build.targets.wheel.force-include]
"packages/authkit_types/src/authkit" = "authkit"

[tool.hatch.publish.repositories.testpypi]
url = "https://test.pypi.org/legacy/"

[tool.hatch.publish.repositories.pypi]
url = "https://upload.pypi.org/legacy/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["packages/authkit/src"]

[tool.pyright]
typeCheckingMode = "standard"
stubPath = "typings"
